@@ -22,7 +22,60 @@ from os.path import expanduser, abspath
 
 from ifigure.utils.wx3to4 import isWX3
 
+import time
+import thread
+from threading import Timer, Thread
+try:
+    from Queue import Queue, Empty
+except ImportError:
+    from queue import Queue, Empty  # python 3.x
+    
+ON_POSIX = 'posix' in sys.builtin_module_names
+
 sx_print_to_consol = False
+
+def enqueue_output(p, queue):
+    while True:
+        line = p.stdout.readline()
+        queue.put(line)
+        if p.poll() is not None: 
+           queue.put(p.stdout.read())
+           break
+    queue.put('process terminated')
+    
+def run_in_thread(p):
+    q = Queue()
+    t = Thread(target=enqueue_output, args=(p, q))
+    t.daemon = True # thread dies with the program
+    t.start()
+
+    lines = ["\n"]
+    line = ''
+    alive = True
+    app = wx.GetApp().TopWindow
+    if sx_print_to_consol:
+        write_cmd = app.proj_tree_viewer.consol.log.AppendText
+    else:
+        write_cmd = app.shell.WriteTextAndPrompt
+    while True:
+        time.sleep(0.01)                
+        try:  line = q.get_nowait() # or q.get(timeout=.1)
+        except Empty:
+            if len(lines) != 0:
+               wx.CallAfter(write_cmd, ''.join(lines))                   
+            lines = []
+        except:
+            import traceback
+            traceback.print_exc()
+            break
+        else: # got line
+            lines.append(line)
+        if line == 'process terminated':
+            if len(lines) > 1:
+               wx.CallAfter(write_cmd, ''.join(lines[:-1]))                                  
+            break
+    return
+
 def sx(strin = ''):
     if strin == '': return
     if strin.startswith('cd '):
@@ -33,13 +86,11 @@ def sx(strin = ''):
     else:
         import subprocess as sp
         p = sp.Popen(strin, shell = True, stdout=sp.PIPE , stderr=sp.STDOUT)
-        txt = ''.join(p.stdout.readlines())
-    if sx_print_to_consol:
-        app = wx.GetApp().TopWindow
-        log = app.proj_tree_viewer.consol.log
-        log.AppendText(txt)
-    else:
-        print(txt)
+        t = Thread(target=run_in_thread, args = (p,))
+        t.daemon = True # thread dies with the program
+        t.start()
+        #run_in_thread(p)           
+        #txt = ''.join(p.stdout.readlines())
 class ShellBase(wx.py.shell.Shell):
     def setBuiltinKeywords(self):
         '''
@@ -432,18 +483,9 @@ class SimpleShell(ShellBase):
         pass
 
     def execute_text(self, text):
-        #self.redirectStdout(True)
-        #self.redirectStderr(True)
         self.Execute(text)
         return
 
-        code = compile(text, '<string>', 'exec')
-        self.lvar["compiled_text"]=code
-        com='exec compiled_text'
-        self.Execute(com)
-        #self.redirectStdout(False)
-        #self.redirectStderr(False)
-        
     def execute_and_hide_main(self, text):
         self.Execute(text)
         self.Execute('import wx;wx.GetApp().TopWindow.goto_no_mainwindow()')
@@ -525,4 +567,7 @@ class SimpleShell(ShellBase):
     def onAutoCompOff(self, evt):
         self._auto_complete = False
 
+    def WriteTextAndPrompt(self, txt):
+        self.WriteText(txt)
+        self.prompt()
        
